// Autogenerated with StateSmith 0.19.0-alpha-1+5931a3a68e50c80e83349118a90569bf08270686.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

namespace StatesmithPractice;

// Generated state machine
public partial class ChoicePseudoStatesEx07
{
    public enum EventId
    {
        DIM = 0,
        INCREASE = 1,
    }

    public const int EventIdCount = 2;

    public enum StateId
    {
        ROOT = 0,
        OFF = 1,
        ON = 2,
        ON1 = 3,
        ON2 = 4,
    }

    public const int StateIdCount = 5;

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public ChoicePseudoStatesEx07()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(OFF)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `OFF`.
                OFF_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {
        switch (this.stateId)
        {
            // STATE: ChoicePseudoStatesEx07
            case StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break;

            // STATE: OFF
            case StateId.OFF:
                switch (eventId)
                {
                    case EventId.INCREASE: OFF_increase(); break;
                }
                break;

            // STATE: ON
            case StateId.ON:
                switch (eventId)
                {
                    case EventId.DIM: ON_dim(); break;
                }
                break;

            // STATE: ON1
            case StateId.ON1:
                switch (eventId)
                {
                    case EventId.DIM: ON_dim(); break; // First ancestor handler for this event
                }
                break;

            // STATE: ON2
            case StateId.ON2:
                switch (eventId)
                {
                    case EventId.DIM: ON_dim(); break; // First ancestor handler for this event
                }
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.OFF: OFF_exit(); break;

                case StateId.ON: ON_exit(); break;

                case StateId.ON1: ON1_exit(); break;

                case StateId.ON2: ON2_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state OFF
    ////////////////////////////////////////////////////////////////////////////////

    private void OFF_enter()
    {
        this.stateId = StateId.OFF;

        // OFF behavior
        // uml: enter / { light_off(); }
        {
            // Step 1: execute action `light_off();`
            light_off();
        } // end of behavior for OFF
    }

    private void OFF_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void OFF_increase()
    {
        // OFF behavior
        // uml: INCREASE TransitionTo(ON)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            OFF_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ON`.
            ON_enter();

            // ON.<InitialState> behavior
            // uml: TransitionTo(ON.<ChoicePoint>(o))
            {
                // Step 1: Exit states until we reach `ON` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `ON.<ChoicePoint>(o)`.
                // ON.<ChoicePoint>(o) is a pseudo state and cannot have an `enter` trigger.

                // ON.<ChoicePoint>(o) behavior
                // uml: [count % 2 == 0] TransitionTo(ON1)
                if (count % 2 == 0)
                {
                    // Step 1: Exit states until we reach `ON` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                    // Step 2: Transition action: ``.

                    // Step 3: Enter/move towards transition target `ON1`.
                    ON1_enter();

                    // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                    return;
                } // end of behavior for ON.<ChoicePoint>(o)

                // ON.<ChoicePoint>(o) behavior
                // uml: else TransitionTo(ON2)
                {
                    // Step 1: Exit states until we reach `ON` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                    // Step 2: Transition action: ``.

                    // Step 3: Enter/move towards transition target `ON2`.
                    ON2_enter();

                    // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                    return;
                } // end of behavior for ON.<ChoicePoint>(o)
            } // end of behavior for ON.<InitialState>
        } // end of behavior for OFF

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ON
    ////////////////////////////////////////////////////////////////////////////////

    private void ON_enter()
    {
        this.stateId = StateId.ON;
    }

    private void ON_exit()
    {
        // ON behavior
        // uml: exit / { count++; }
        {
            // Step 1: execute action `count++;`
            count++;
        } // end of behavior for ON

        this.stateId = StateId.ROOT;
    }

    private void ON_dim()
    {
        // ON behavior
        // uml: DIM TransitionTo(OFF)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.ROOT);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `OFF`.
            OFF_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ON1
    ////////////////////////////////////////////////////////////////////////////////

    private void ON1_enter()
    {
        this.stateId = StateId.ON1;

        // ON1 behavior
        // uml: enter / { light_blue(); }
        {
            // Step 1: execute action `light_blue();`
            light_blue();
        } // end of behavior for ON1
    }

    private void ON1_exit()
    {
        this.stateId = StateId.ON;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ON2
    ////////////////////////////////////////////////////////////////////////////////

    private void ON2_enter()
    {
        this.stateId = StateId.ON2;

        // ON2 behavior
        // uml: enter / { light_red(); }
        {
            // Step 1: execute action `light_red();`
            light_red();
        } // end of behavior for ON2
    }

    private void ON2_exit()
    {
        this.stateId = StateId.ON;
    }

    // Thread safe.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.OFF: return "OFF";
            case StateId.ON: return "ON";
            case StateId.ON1: return "ON1";
            case StateId.ON2: return "ON2";
            default: return "?";
        }
    }

    // Thread safe.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.DIM: return "DIM";
            case EventId.INCREASE: return "INCREASE";
            default: return "?";
        }
    }
}
